--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <header class="header">
-      <a href="" class="logo-header logo link"
+      <a lang="en" href="" class="logo-header logo link"
         ><span class="logo-blue">Web</span>Studio</a
       >
       <ul class="header-nav list">
-        <li><a href="" class="header-nav-list-item link">Студія</a></li>
-        <li><a href="" class="header-nav-list-item link">Портфоліо</a></li>
+        <li><a href="./index.html" class="link current">Студія</a></li>
+        <li><a href="./portfolio.html" class="header-nav-list-item link">Портфоліо</a></li>
         <li><a href="" class="header-nav-list-item link">Контакти</a></li>
       </ul>
       <ul class="header-contacts list">
@@ -134,7 +134,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="" class="logo-footer logo link"
+      <a lang="en" href="" class="logo-footer logo link"
         ><span class="logo-blue">Web</span>Studio</a
       >
       <address class="address">
