--- a/portfolio.html
+++ b/portfolio.html
@@ -41,19 +41,19 @@
         <h1 class="visually-hidden">Portfolio</h1>
         <ul class="list portfolio-nav-list">
           <li class="portfolio-list-item">
-            <button class="portfolio-btn" type="button">Все</button>
+            <button class="portfolio-btn btn" type="button">Все</button>
           </li>
           <li class="portfolio-list-item">
-            <button class="portfolio-btn" type="button">Веб-сайти</button>
+            <button class="portfolio-btn btn" type="button">Веб-сайти</button>
           </li>
           <li class="portfolio-list-item">
-            <button class="portfolio-btn" type="button">Додатки</button>
+            <button class="portfolio-btn btn" type="button">Додатки</button>
           </li>
           <li class="portfolio-list-item">
-            <button class="portfolio-btn" type="button">Дизайн</button>
+            <button class="portfolio-btn btn" type="button">Дизайн</button>
           </li>
           <li class="portfolio-list-item">
-            <button class="portfolio-btn" type="button">Маркетинг</button>
+            <button class="portfolio-btn btn" type="button">Маркетинг</button>
           </li>
         </ul>
         <ul class="list portfolio-works-list">
