--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <a lang="en" href="" class="logo-header logo link"
+      <a lang="en" href="./index.html" class="logo-header logo link"
         ><span class="logo-blue">Web</span>Studio</a
       >
       <ul class="header-nav list">
@@ -140,7 +140,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a lang="en" href="" class="logo-footer logo link"
+      <a lang="en" href="./index.html" class="logo-footer logo link"
         ><span class="logo-blue">Web</span>Studio</a
       >
       <address class="address">
